uploading logo image is working

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,4 @@ fabric.properties
 /baby_dimensions/web/static/images/weight_1.png
 /generate_k8s_files/output/
 /server/static/output/
+/server/static/logos/
