--- a/k8s/webapp/1-persistent-volume-claim.yaml
+++ b/k8s/webapp/1-persistent-volume-claim.yaml
@@ -6,9 +6,9 @@ metadata:
 spec:
   selector:
     matchLabels:
-      volume: blood-bowl-league-manager-postgres
+      volume: blood-bowl-league-manager-images
   accessModes: [ "ReadWriteMany" ]
   storageClassName: ""
   resources:
     requests:
-      storage: 1.5Gi
+      storage: 1.Gi
