--- a/k8s/webapp/0-configmap-init-files.yaml
+++ b/k8s/webapp/0-configmap-init-files.yaml
@@ -15,8 +15,8 @@ data:
     BBLM;Season 2;S.2;False;-2:1\n-1:2\n0:3\n1:4\n2:5
     BBLM;Season 3;S.3;False;-2:1\n-1:2\n0:3\n1:4\n2:5
     BBLM;Season 5;S.5;False;-2:1\n-1:2\n0:3\n1:4\n2:5
-    BBLM;Season 6;S.6;False;-2:1\n-1:2\n0:3\n1:4\n2:5
     BBLM;Season 4;S.4;False;-2:1\n-1:2\n0:3\n1:4\n2:5
+    BBLM;Season 6;S.6;False;-2:1\n-1:2\n0:3\n1:4\n2:5
     BBLM;Season 7;S.7;False;-2:1\n-1:2\n0:3\n1:4\n2:5
     WBBL;Season 1;S.1;False;-1:0\n0:1\n1:3
     WBBL;Season 2;S.2;True;-1:0\n0:1\n1:3
@@ -180,29 +180,6 @@ data:
     Warpdust Walkers;Bernd;Junker; ;Skaven;S.5;BBLM
     White Walkers;Christian;Stach; ;Norse;S.5;BBLM
     Wolbecker Wolpertinger;Ron;Krollzig; ;Chaos Pact;S.5;BBLM
-    A Flock of Seagulls;Bernd;Junker; ;Elfen Union;S.6;BBLM
-    Aasee Battletoads;Thomas;Ludwig; ;Slann;S.6;BBLM
-    Aasee Vikings;Gregor;Saremba; ;Norse;S.6;BBLM
-    Boralus Bruisers;Christian;Heeck; ;Chaos Chosen;S.6;BBLM
-    Böhmerbach Buntspechte;Max;Driemer; ;Waldelfen;S.6;BBLM
-    Dark Stars;Thomas;Ludwig; ;Dunkelelfen;S.6;BBLM
-    Das Asoziale Netzwerk;Dominick;B; ;Orks;S.6;BBLM
-    Erpho Erazers;Till;Limbrock; ;Orks;S.6;BBLM
-    FC Khorne 08;Nikolaus;Fischer; ;Chaos Chosen;S.6;BBLM
-    Green Beard Boozers;Carl;Kapinski; ;Zwerge;S.6;BBLM
-    Green Jungle Packers;Tobias;Stelter; ;Echsenmenschen;S.6;BBLM
-    Katharsis Kattegat;Rainer;Gelhaus; ;Norse;S.6;BBLM
-    Khrx Seahawks;Ron;Krollzig; ;Amazonen;S.6;BBLM
-    LoneBone Shamblers;Marco;Oberecht;Obi;Untote;S.6;BBLM
-    Naggaroth Nightmares;Tobias;Stelter; ;Dunkelelfen;S.6;BBLM
-    Red Rage;Bernd;Junker; ;Chaos Pact;S.6;BBLM
-    Red Rambling Ravens;Rainer;Gelhaus; ;Amazonen;S.6;BBLM
-    Team Horror;Christian;Stach; ;Nekromanten;S.6;BBLM
-    Team Six;Christian;Stach; ;Untote;S.6;BBLM
-    Telgoth Slayers;Marc;Jannemann; ;Orks;S.6;BBLM
-    The Chosen Ones;Lukas;Ziegert; ;Chaos Chosen;S.6;BBLM
-    Warpfire Fighters;Benjamin;Roß; ;Skaven;S.6;BBLM
-    Wolbecker Wolpertinger;Marco;Oberecht;Obi;Chaos Pact;S.6;BBLM
     11xElf;Christian;Stach; ;Waldelfen;S.4;BBLM
     BabySaurus2;Christian;Stach; ;Echsenmenschen;S.4;BBLM
     Badbulls;Raphael;Wresch; ;Orks;S.4;BBLM
@@ -242,6 +219,29 @@ data:
     Warpstone Hunters;Bernd;Junker; ;Skaven;S.4;BBLM
     Wolfgangs Wölfe;Tobias;Stelter; ;Nekromanten;S.4;BBLM
     Woodies Woodpackers;Dirk;Mannweiler;Manni;Waldelfen;S.4;BBLM
+    A Flock of Seagulls;Bernd;Junker; ;Elfen Union;S.6;BBLM
+    Aasee Battletoads;Thomas;Ludwig; ;Slann;S.6;BBLM
+    Aasee Vikings;Gregor;Saremba; ;Norse;S.6;BBLM
+    Boralus Bruisers;Christian;Heeck; ;Chaos Chosen;S.6;BBLM
+    Böhmerbach Buntspechte;Max;Driemer; ;Waldelfen;S.6;BBLM
+    Dark Stars;Thomas;Ludwig; ;Dunkelelfen;S.6;BBLM
+    Das Asoziale Netzwerk;Dominick;B; ;Orks;S.6;BBLM
+    Erpho Erazers;Till;Limbrock; ;Orks;S.6;BBLM
+    FC Khorne 08;Nikolaus;Fischer; ;Chaos Chosen;S.6;BBLM
+    Green Beard Boozers;Carl;Kapinski; ;Zwerge;S.6;BBLM
+    Green Jungle Packers;Tobias;Stelter; ;Echsenmenschen;S.6;BBLM
+    Katharsis Kattegat;Rainer;Gelhaus; ;Norse;S.6;BBLM
+    Khrx Seahawks;Ron;Krollzig; ;Amazonen;S.6;BBLM
+    LoneBone Shamblers;Marco;Oberecht;Obi;Untote;S.6;BBLM
+    Naggaroth Nightmares;Tobias;Stelter; ;Dunkelelfen;S.6;BBLM
+    Red Rage;Bernd;Junker; ;Chaos Pact;S.6;BBLM
+    Red Rambling Ravens;Rainer;Gelhaus; ;Amazonen;S.6;BBLM
+    Team Horror;Christian;Stach; ;Nekromanten;S.6;BBLM
+    Team Six;Christian;Stach; ;Untote;S.6;BBLM
+    Telgoth Slayers;Marc;Jannemann; ;Orks;S.6;BBLM
+    The Chosen Ones;Lukas;Ziegert; ;Chaos Chosen;S.6;BBLM
+    Warpfire Fighters;Benjamin;Roß; ;Skaven;S.6;BBLM
+    Wolbecker Wolpertinger;Marco;Oberecht;Obi;Chaos Pact;S.6;BBLM
     Aasee Vikings;Gregor;Saremba; ;Norse;S.7;BBLM
     Aqualand Stingrays;Carl;Kapinski; ;Elfen Union;S.7;BBLM
     Asoziales Netzwerk Returns;Dominick;B; ;Orks;S.7;BBLM
@@ -613,56 +613,6 @@ data:
     61;Seaorcs;Stierland Stallions;1;0;0;0;False;False;True;False;S.5;BBLM
     62;Firnstain Frostwölfe;Seaorcs;2;0;0;0;False;False;True;False;S.5;BBLM
     63;Firnstain Frostwölfe;Athelorn Avengers;1;0;0;0;False;False;True;False;S.5;BBLM
-    1;Red Rage;Team Horror;2;1;0;0;False;False;False;False;S.6;BBLM
-    2;Telgoth Slayers;Böhmerbach Buntspechte;2;2;0;0;False;False;False;False;S.6;BBLM
-    3;Red Rage;Naggaroth Nightmares;2;2;0;0;False;False;False;False;S.6;BBLM
-    4;Erpho Erazers;Green Beard Boozers;1;0;0;0;False;False;False;False;S.6;BBLM
-    5;FC Khorne 08;Telgoth Slayers;2;0;0;0;False;False;False;False;S.6;BBLM
-    6;Red Rage;Telgoth Slayers;2;0;0;0;False;False;False;False;S.6;BBLM
-    7;Red Rage;Das Asoziale Netzwerk;2;0;0;0;False;False;False;False;S.6;BBLM
-    8;Team Six;Dark Stars;2;0;0;0;False;False;False;False;S.6;BBLM
-    9;Boralus Bruisers;Naggaroth Nightmares;2;0;0;0;False;False;False;False;S.6;BBLM
-    10;FC Khorne 08;Wolbecker Wolpertinger;1;1;0;0;False;False;False;False;S.6;BBLM
-    11;Erpho Erazers;Dark Stars;2;1;0;0;False;False;False;False;S.6;BBLM
-    12;Team Six;Green Jungle Packers;2;1;0;0;False;False;False;False;S.6;BBLM
-    13;Telgoth Slayers;Naggaroth Nightmares;1;1;0;0;False;False;False;False;S.6;BBLM
-    14;Das Asoziale Netzwerk;The Chosen Ones;1;0;0;0;False;False;False;False;S.6;BBLM
-    15;Green Jungle Packers;FC Khorne 08;2;0;0;0;False;False;False;False;S.6;BBLM
-    16;Green Jungle Packers;Telgoth Slayers;1;0;0;0;False;False;False;False;S.6;BBLM
-    17;Team Six;Telgoth Slayers;1;0;0;0;False;False;False;False;S.6;BBLM
-    18;Green Jungle Packers;Boralus Bruisers;3;1;0;0;False;False;False;False;S.6;BBLM
-    19;Team Six;Boralus Bruisers;2;0;0;0;False;False;False;False;S.6;BBLM
-    20;Boralus Bruisers;The Chosen Ones;1;0;0;0;False;False;False;False;S.6;BBLM
-    21;Green Jungle Packers;Das Asoziale Netzwerk;3;0;0;0;False;False;False;False;S.6;BBLM
-    22;Boralus Bruisers;FC Khorne 08;1;1;0;0;False;False;False;False;S.6;BBLM
-    23;The Chosen Ones;Warpfire Fighters;2;1;0;0;False;False;False;False;S.6;BBLM
-    24;Green Jungle Packers;The Chosen Ones;2;0;0;0;False;False;False;False;S.6;BBLM
-    25;The Chosen Ones;Team Six;1;0;0;0;False;False;False;False;S.6;BBLM
-    26;Warpfire Fighters;FC Khorne 08;2;1;0;0;False;False;False;False;S.6;BBLM
-    27;Team Six;FC Khorne 08;2;0;0;0;False;False;False;False;S.6;BBLM
-    28;The Chosen Ones;Red Rage;2;1;0;0;False;False;False;False;S.6;BBLM
-    29;Das Asoziale Netzwerk;Warpfire Fighters;2;2;0;0;False;False;False;False;S.6;BBLM
-    30;Team Six;Red Rage;2;0;0;0;False;False;False;False;S.6;BBLM
-    31;Team Six;Red Rage;1;1;0;0;False;False;False;False;S.6;BBLM
-    32;Erpho Erazers;Warpfire Fighters;2;1;0;0;False;False;False;False;S.6;BBLM
-    33;Red Rambling Ravens;Boralus Bruisers;2;1;0;0;False;False;False;False;S.6;BBLM
-    34;Green Jungle Packers;Warpfire Fighters;1;1;0;0;False;False;False;False;S.6;BBLM
-    35;FC Khorne 08;The Chosen Ones;2;0;0;0;False;False;False;False;S.6;BBLM
-    36;Red Rage;Warpfire Fighters;1;1;0;0;False;False;False;False;S.6;BBLM
-    37;FC Khorne 08;A Flock of Seagulls;2;0;0;0;False;False;False;False;S.6;BBLM
-    38;Das Asoziale Netzwerk;Boralus Bruisers;1;1;0;0;False;False;False;False;S.6;BBLM
-    39;Green Jungle Packers;A Flock of Seagulls;2;1;0;0;False;False;False;False;S.6;BBLM
-    40;Boralus Bruisers;A Flock of Seagulls;2;0;0;0;False;False;False;False;S.6;BBLM
-    41;Aasee Vikings;Katharsis Kattegat;0;0;0;0;False;False;False;False;S.6;BBLM
-    42;Das Asoziale Netzwerk;Team Horror;2;0;0;0;False;False;False;False;S.6;BBLM
-    43;Green Jungle Packers;Erpho Erazers;2;1;0;0;False;False;True;False;S.6;BBLM
-    44;FC Khorne 08;Boralus Bruisers;0;2;0;0;False;False;True;False;S.6;BBLM
-    45;Team Six;Das Asoziale Netzwerk;2;0;0;0;False;False;True;False;S.6;BBLM
-    46;Red Rage;The Chosen Ones;0;2;0;0;False;False;True;False;S.6;BBLM
-    47;Green Jungle Packers;Boralus Bruisers;1;2;0;0;False;False;True;False;S.6;BBLM
-    48;Team Six;The Chosen Ones;0;2;0;0;False;False;True;False;S.6;BBLM
-    49;Boralus Bruisers;The Chosen Ones;1;1;0;0;False;False;True;False;S.6;BBLM
-    50;Green Jungle Packers;Team Six;2;1;0;0;False;False;True;False;S.6;BBLM
     1;Tlaxtlan Titans;Red Mob;2;0;0;0;False;False;False;False;S.4;BBLM
     2;Köllefornia Orcstars;Blitzburgh Stealers;2;0;0;0;False;False;False;False;S.4;BBLM
     3;Sporting Tafelrunde;Lieber Tot Als Zweiter;1;1;0;0;False;False;False;False;S.4;BBLM
@@ -784,6 +734,56 @@ data:
     119;Köllefornia Orcstars;Mordheim Mutant Ninja Rats;1;2;0;0;False;False;True;False;S.4;BBLM
     120;Huatl Hunters;Köllefornia Orcstars;2;2;0;0;False;False;True;False;S.4;BBLM
     121;Havixbeck Deadskins;Mordheim Mutant Ninja Rats;1;2;0;0;False;False;True;False;S.4;BBLM
+    1;Red Rage;Team Horror;2;1;0;0;False;False;False;False;S.6;BBLM
+    2;Telgoth Slayers;Böhmerbach Buntspechte;2;2;0;0;False;False;False;False;S.6;BBLM
+    3;Red Rage;Naggaroth Nightmares;2;2;0;0;False;False;False;False;S.6;BBLM
+    4;Erpho Erazers;Green Beard Boozers;1;0;0;0;False;False;False;False;S.6;BBLM
+    5;FC Khorne 08;Telgoth Slayers;2;0;0;0;False;False;False;False;S.6;BBLM
+    6;Red Rage;Telgoth Slayers;2;0;0;0;False;False;False;False;S.6;BBLM
+    7;Red Rage;Das Asoziale Netzwerk;2;0;0;0;False;False;False;False;S.6;BBLM
+    8;Team Six;Dark Stars;2;0;0;0;False;False;False;False;S.6;BBLM
+    9;Boralus Bruisers;Naggaroth Nightmares;2;0;0;0;False;False;False;False;S.6;BBLM
+    10;FC Khorne 08;Wolbecker Wolpertinger;1;1;0;0;False;False;False;False;S.6;BBLM
+    11;Erpho Erazers;Dark Stars;2;1;0;0;False;False;False;False;S.6;BBLM
+    12;Team Six;Green Jungle Packers;2;1;0;0;False;False;False;False;S.6;BBLM
+    13;Telgoth Slayers;Naggaroth Nightmares;1;1;0;0;False;False;False;False;S.6;BBLM
+    14;Das Asoziale Netzwerk;The Chosen Ones;1;0;0;0;False;False;False;False;S.6;BBLM
+    15;Green Jungle Packers;FC Khorne 08;2;0;0;0;False;False;False;False;S.6;BBLM
+    16;Green Jungle Packers;Telgoth Slayers;1;0;0;0;False;False;False;False;S.6;BBLM
+    17;Team Six;Telgoth Slayers;1;0;0;0;False;False;False;False;S.6;BBLM
+    18;Green Jungle Packers;Boralus Bruisers;3;1;0;0;False;False;False;False;S.6;BBLM
+    19;Team Six;Boralus Bruisers;2;0;0;0;False;False;False;False;S.6;BBLM
+    20;Boralus Bruisers;The Chosen Ones;1;0;0;0;False;False;False;False;S.6;BBLM
+    21;Green Jungle Packers;Das Asoziale Netzwerk;3;0;0;0;False;False;False;False;S.6;BBLM
+    22;Boralus Bruisers;FC Khorne 08;1;1;0;0;False;False;False;False;S.6;BBLM
+    23;The Chosen Ones;Warpfire Fighters;2;1;0;0;False;False;False;False;S.6;BBLM
+    24;Green Jungle Packers;The Chosen Ones;2;0;0;0;False;False;False;False;S.6;BBLM
+    25;The Chosen Ones;Team Six;1;0;0;0;False;False;False;False;S.6;BBLM
+    26;Warpfire Fighters;FC Khorne 08;2;1;0;0;False;False;False;False;S.6;BBLM
+    27;Team Six;FC Khorne 08;2;0;0;0;False;False;False;False;S.6;BBLM
+    28;The Chosen Ones;Red Rage;2;1;0;0;False;False;False;False;S.6;BBLM
+    29;Das Asoziale Netzwerk;Warpfire Fighters;2;2;0;0;False;False;False;False;S.6;BBLM
+    30;Team Six;Red Rage;2;0;0;0;False;False;False;False;S.6;BBLM
+    31;Team Six;Red Rage;1;1;0;0;False;False;False;False;S.6;BBLM
+    32;Erpho Erazers;Warpfire Fighters;2;1;0;0;False;False;False;False;S.6;BBLM
+    33;Red Rambling Ravens;Boralus Bruisers;2;1;0;0;False;False;False;False;S.6;BBLM
+    34;Green Jungle Packers;Warpfire Fighters;1;1;0;0;False;False;False;False;S.6;BBLM
+    35;FC Khorne 08;The Chosen Ones;2;0;0;0;False;False;False;False;S.6;BBLM
+    36;Red Rage;Warpfire Fighters;1;1;0;0;False;False;False;False;S.6;BBLM
+    37;FC Khorne 08;A Flock of Seagulls;2;0;0;0;False;False;False;False;S.6;BBLM
+    38;Das Asoziale Netzwerk;Boralus Bruisers;1;1;0;0;False;False;False;False;S.6;BBLM
+    39;Green Jungle Packers;A Flock of Seagulls;2;1;0;0;False;False;False;False;S.6;BBLM
+    40;Boralus Bruisers;A Flock of Seagulls;2;0;0;0;False;False;False;False;S.6;BBLM
+    41;Aasee Vikings;Katharsis Kattegat;0;0;0;0;False;False;False;False;S.6;BBLM
+    42;Das Asoziale Netzwerk;Team Horror;2;0;0;0;False;False;False;False;S.6;BBLM
+    43;Green Jungle Packers;Erpho Erazers;2;1;0;0;False;False;True;False;S.6;BBLM
+    44;FC Khorne 08;Boralus Bruisers;0;2;0;0;False;False;True;False;S.6;BBLM
+    45;Team Six;Das Asoziale Netzwerk;2;0;0;0;False;False;True;False;S.6;BBLM
+    46;Red Rage;The Chosen Ones;0;2;0;0;False;False;True;False;S.6;BBLM
+    47;Green Jungle Packers;Boralus Bruisers;1;2;0;0;False;False;True;False;S.6;BBLM
+    48;Team Six;The Chosen Ones;0;2;0;0;False;False;True;False;S.6;BBLM
+    49;Boralus Bruisers;The Chosen Ones;1;1;0;0;False;False;True;False;S.6;BBLM
+    50;Green Jungle Packers;Team Six;2;1;0;0;False;False;True;False;S.6;BBLM
     1;Asoziales Netzwerk Returns;The Chosen Ones;0;2;0;0;False;False;False;False;S.7;BBLM
     2;Telgte Troubadours;Stirland Sentinels;1;3;0;0;False;False;False;False;S.7;BBLM
     3;Killer Bees;Stirland Sentinels;1;1;0;0;False;False;False;False;S.7;BBLM
@@ -807,6 +807,10 @@ data:
     21;Telgoth Oak Sticks;Stirland Sentinels;0;2;0;0;False;False;False;False;S.7;BBLM
     22;Killer Bees;Hellpit Harbingers;2;0;0;0;False;False;False;False;S.7;BBLM
     23;Telgte Troubadours;Telligt Night Hawks;3;0;0;0;False;False;False;False;S.7;BBLM
+    24;Stirland Sentinels;Erpho Raptors;2;0;0;0;False;False;True;False;S.7;BBLM
+    25;Killer Bees;Aqualand Stingrays;2;0;0;0;False;False;True;False;S.7;BBLM
+    26;Telgte Troubadours;Raffy’s Roxler Ratten;0;2;0;0;False;False;True;False;S.7;BBLM
+    27;Stirland Sentinels;Raffy’s Roxler Ratten;2;0;0;0;False;False;True;False;S.7;BBLM
     1;Raffy's Roxler Ratten;Asgard Allstars;2;1;0;0;False;False;False;False;S.1;WBBL
     2;Barak Varr Blackhawks;Iskvard Ironfins;1;0;0;0;False;False;False;False;S.1;WBBL
     3;Ironfoot Greybeards;Chlamydiaville Clappers;1;1;0;0;False;False;False;False;S.1;WBBL
