--- a/k8s/webapp/0-configmap-init-files.yaml
+++ b/k8s/webapp/0-configmap-init-files.yaml
@@ -899,9 +899,11 @@ data:
     33;Necropolis Nightmares;Naggaroth Nightwings;1;0;0;0;False;False;False;False;False;False;S.2;WBBL
     38;Ancient Conquerors;Altdorf Tigers;1;0;0;0;False;False;False;False;False;False;S.2;WBBL
     39;Die Hafenmeister;Righteous Anger;1;0;0;0;False;False;False;False;False;False;S.2;WBBL
-    40;Anaheim Frozen Fingers;Necropolis Nightmares;2;0;0;0;False;False;False;False;False;False;S.2;WBBL
     34;Necropolis Nightmares;Lucky Men in Tights;2;4;0;0;False;False;False;False;False;False;S.2;WBBL
+    40;Anaheim Frozen Fingers;Necropolis Nightmares;2;1;0;0;False;False;False;False;False;False;S.2;WBBL
+    41;Mortheim Maniacs;Hexoatl Vipers;4;0;0;0;False;False;False;False;False;False;S.2;WBBL
     35;Bläckhead Smashazz;Righteous Anger;1;3;0;0;False;False;False;False;False;False;S.2;WBBL
+    42;Da Red Thunda;Squighorn Screamers;2;0;0;0;False;False;False;False;False;False;S.2;WBBL
     36;Middenland Wolves;Helden in Strumpfhosen;2;0;0;0;False;False;False;False;False;False;S.2;WBBL
     37;Necropolis Nightmares;Mortheim Maniacs;1;1;0;0;False;False;False;False;False;False;S.2;WBBL
   additional_statistics.csv: |
@@ -967,3 +969,6 @@ data:
     Die Hafenmeister;4;S.2;WBBL
     Anaheim Frozen Fingers;2;S.2;WBBL
     Necropolis Nightmares;1;S.2;WBBL
+    Hexoatl Vipers;1;S.2;WBBL
+    Da Red Thunda;2;S.2;WBBL
+    Squighorn Screamers;1;S.2;WBBL
