--- a/k8s/webapp/4-ingress.yaml
+++ b/k8s/webapp/4-ingress.yaml
@@ -3,6 +3,8 @@ kind: Ingress
 metadata:
   name: blood-bowl
   namespace: blood-bowl-league-manager
+  annotations:
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 spec:
   rules:
     - http:
