--- a/k8s/webapp/2-deployment-flask.yaml
+++ b/k8s/webapp/2-deployment-flask.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: blood-bowl-league-manager
-          image: barryallenofearth/blood-bowl-league-manager:37
+          image: barryallenofearth/blood-bowl-league-manager:42
           env:
             - name: DB_NAME
               valueFrom:
@@ -38,8 +38,8 @@ spec:
               value: postgresql://$(DB_USER):$(DB_PASSWORD)@postgresql:5432/$(DB_NAME)
           resources: { }
           ports:
-            - containerPort: 443
-              name: https
+            - containerPort: 80
+              name: http
           volumeMounts:
             - mountPath: /app/blood-bowl-league-manager/data/leagues.csv
               name: data-files
@@ -61,31 +61,29 @@ spec:
               subPath: additional_statistics.csv
             - name: images-volume
               mountPath: /app/blood-bowl-league-manager/server/static/logos
-            - name: certificates-volume
-              mountPath: /app/blood-bowl-league-manager/certificates
           livenessProbe:
             httpGet:
-              path: /health
-              port: 443
-              scheme: HTTPS
+              path: /blood-bowl/health
+              port: 80
+              scheme: HTTP
             periodSeconds: 60
             timeoutSeconds: 5
             failureThreshold: 3
             successThreshold: 1
           readinessProbe:
             httpGet:
-              path: /
-              port: 443
-              scheme: HTTPS
+              path: /blood-bowl/
+              port: 80
+              scheme: HTTP
             periodSeconds: 60
             timeoutSeconds: 5
             failureThreshold: 3
             successThreshold: 1
           startupProbe:
             httpGet:
-              path: /
-              port: 443
-              scheme: HTTPS
+              path: /blood-bowl/
+              port: 80
+              scheme: HTTP
             periodSeconds: 30
             timeoutSeconds: 30
             failureThreshold: 3
@@ -97,6 +95,3 @@ spec:
         - name: images-volume
           persistentVolumeClaim:
             claimName: nfs-blood-bowl-league-manager-logos-pvc
-        - name: certificates-volume
-          persistentVolumeClaim:
-            claimName: nfs-pv-blood-bowl-league-manager-certificates-pvc
