--- a/k8s/4-ingress-dashboard.yaml
+++ b/k8s/4-ingress-dashboard.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
@@ -10,10 +10,13 @@ spec:
   - host: thinkcentre-m92p.fritz.box
     http:
       paths:
-      - backend:
-          serviceName: kubernetes-dashboard
-          servicePort: 443
-        path: /
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: dashboard
+                port:
+                  name: http
   tls:
     - hosts:
         - thinkcentre-m92p.fritz.box
