--- a/k8s/webapp/4-ingress.yaml
+++ b/k8s/webapp/4-ingress.yaml
@@ -5,7 +5,10 @@ metadata:
   namespace: blood-bowl-league-manager
   annotations:
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
         - thinkcentre-m92p.fritz.box
@@ -14,8 +17,8 @@ spec:
   - host: thinkcentre-m92p.fritz.box
     http:
         paths:
-          - path: /blood-bowl
-            pathType: Prefix
+          - path: /blood-bowl(/|$)(.*)
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: webapp
