Revert "changed ingress to rewrite request path"
This reverts commit e7f89683ba82a554bbb3ccd9e6bdf1f7b5d143fa.

--- a/k8s/webapp/4-ingress.yaml
+++ b/k8s/webapp/4-ingress.yaml
@@ -5,10 +5,7 @@ metadata:
   namespace: blood-bowl-league-manager
   annotations:
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
-  ingressClassName: nginx
   tls:
     - hosts:
         - thinkcentre-m92p.fritz.box
@@ -17,8 +14,8 @@ spec:
   - host: thinkcentre-m92p.fritz.box
     http:
         paths:
-          - path: /blood-bowl(/|$)(.*)
-            pathType: ImplementationSpecific
+          - path: /blood-bowl
+            pathType: Prefix
             backend:
               service:
                 name: webapp
