--- a/k8s/webapp/2-deployment-flask.yaml
+++ b/k8s/webapp/2-deployment-flask.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: blood-bowl-league-manager
-          image: barryallenofearth/blood-bowl-league-manager:43
+          image: barryallenofearth/blood-bowl-league-manager:42
           env:
             - name: DB_NAME
               valueFrom:
@@ -63,7 +63,7 @@ spec:
               mountPath: /app/blood-bowl-league-manager/server/static/logos
           livenessProbe:
             httpGet:
-              path: /health
+              path: /blood-bowl/health
               port: 80
               scheme: HTTP
             periodSeconds: 60
@@ -72,7 +72,7 @@ spec:
             successThreshold: 1
           readinessProbe:
             httpGet:
-              path: /
+              path: /blood-bowl/
               port: 80
               scheme: HTTP
             periodSeconds: 60
@@ -81,7 +81,7 @@ spec:
             successThreshold: 1
           startupProbe:
             httpGet:
-              path: /
+              path: /blood-bowl/
               port: 80
               scheme: HTTP
             periodSeconds: 30
