--- a/k8s/database/0-volume.yaml
+++ b/k8s/database/0-volume.yaml
@@ -12,9 +12,6 @@ spec:
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
-  mountOptions:
-    - hard
-    - nfsvers=4.1
-  nfs:
-    path: /volume1/kubernetes-blood-bowl/database
-    server: thevoid
+  storageClassName: manual
+  hostPath:
+    path: /mnt/kube-data/kubernetes-blood-bowl/database
